<resources>
    <string name="app_name">设置</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="information">信息</string>
    <string name="password_wrong">输入的密码是不正确的，请再试一次。</string>
    <string name="password_auth">密码认证.</string>
    <string name="password">密码:</string>
    <string name="login_password">登陆密码</string>
    <string name="input_tip">按OK使用输入法</string>
    <string name="menu_network">网络设置</string>
    <string name="menu_display">显示设置</string>
    <string name="menu_voice">声音设置</string>
    <string name="menu_date">日期时间</string>
    <string name="menu_language">语言设置</string>
    <string name="menu_personal">个人设置</string>
    <string name="menu_app">应用管理</string>
    <string name="menu_upgrade">系统升级</string>
    <string name="menu_about">设备信息</string>
    <string name="menu_networkinfo">网络信息</string>
    <string name="menu_reset">恢复出厂</string>
    <string name="menu_video">播放设置</string>
    <string name="menu_pwdprotected">密码保护</string>
    <string name="menu_power_save">节能设置</string>
    <string name="menu_sys_setting">系统设置</string>
    <string name="menu_net_check">网络检测</string>
    <string name="network_set">网络设置</string>
    <string name="network_wlan">启用无线局域网</string>
    <string name="network_wlan_set">wifi设置</string>
    <string name="network_wlan_set_info">设置无线访问点.</string>
    <string name="network_wlan_net_set">设置无线网络</string>
    <string name="network_wlan_net_set_info">设置WiFi热点.</string>
    <string name="network_eth">以太网设置</string>
    <string name="network_eth_info">设置和管理以太网网络.</string>
    <string name="network_ip">IP地址:</string>
    <string name="network_mask">子网掩码:</string>
    <string name="network_gateway">网关:</string>
    <string name="network_dns">DNS服务器:</string>
    <string name="network_dns2">备用DNS:</string>
    <string name="network_static">静态IP</string>
    <string name="network_dhcp">DHCP</string>
    <string name="network_dhcp_option60">支持Option 60/61</string>
    <string name="network_pppoe">PPPoE</string>
    <string name="network_pppoe_username">用户名:</string>
    <string name="network_pppoe_password">密码:</string>
    <string name="network_state_connected">已连接</string>
    <string name="network_state_unconnected">连接断开</string>
    <string name="network_state_connecting">连接中</string>
    <string name="network_state_connecte_failed">连接失败.</string>
    <string name="network_state_disconnect_failed">断开失败.</string>
    <string name="eth_phy_link_up">电缆已连接</string>
    <string name="eth_phy_link_down_check">电缆已断开</string>
    <string name="network_state_authentic_failed">用户名或密码验证失败.</string>
    <string name="network_state_reconnecting">连接失败.拨号的 %1$d时间.</string>
    <string name="network_state_unknown">未知</string>
    <string name="network_state_connecting_msg">连接中...</string>
    <string name="network_pppoe_msg">已断开</string>
    <string name="connect_success">连接成功</string>
    <string name="internet_disconnect">互联网不能连接</string>
    <string name="internet_break">已断开</string>
    <string name="info_error">名称或密码错误</string>
    <string name="input_wrong">输入有误</string>
    <string name="wifi_quick_toggle_title">Wi-Fi</string>
    <string name="wifi_quick_toggle_summary">打开 Wi-Fi</string>
    <string name="wifi_settings">Wi-Fi 设置</string>
    <string name="wifi_settings_category">Wi-Fi 设置</string>
    <string name="wifi_settings_summary">设置 &amp; 管理无线接入点</string>
    <string name="wifi_starting">打开中...</string>
    <string name="wifi_stopping">暂停中...</string>
    <string name="wifi_error">错误</string>
    <string name="wifi_in_airplane_mode">飞机模式</string>
    <string name="wifi_fail_to_scan">无法扫描网络</string>
    <string name="wifi_notify_open_networks">网络通知</string>
    <string name="wifi_notify_open_networks_summary">网络是可用的</string>
    <string name="wifi_add_network">添加 Wi-Fi 网络</string>
    <string name="wifi_access_points">Wi-Fi 网络</string>
    <string name="wifi_menu_scan">扫描</string>
    <string name="wifi_menu_advanced">先进</string>
    <string name="wifi_menu_connect">连接到网络</string>
    <string name="wifi_menu_forget">忘记网络</string>
    <string name="wifi_menu_modify">修改网络</string>
    <string name="wifi_ssid">网络名称</string>
    <string name="wifi_security">安全</string>
    <string name="wifi_signal">信号强度</string>
    <string name="wifi_status">状态</string>
    <string name="wifi_speed">链接速度</string>
    <string name="wifi_ip_address">IP 地址</string>
    <string name="wifi_eap_method">EAP 方法</string>
    <string name="please_select_phase2">第二阶段认证</string>
    <string name="wifi_eap_ca_cert">CA证书</string>
    <string name="wifi_eap_user_cert">用户证书</string>
    <string name="wifi_eap_identity">身份</string>
    <string name="wifi_eap_anonymous">匿名身份</string>
    <string name="wifi_password">密码</string>
    <string name="wifi_show_password">显示密码.</string>
    <string name="wifi_unchanged">(不变)</string>
    <string name="wifi_unspecified">(不明)</string>
    <string name="wifi_remembered">已保存</string>
    <string name="wifi_disabled">禁用</string>
    <string name="wifi_not_in_range">不在范围</string>
    <string name="wifi_secured">固定 %1$s</string>
    <string name="wifi_secured_with_status">%2$s,获得与 %1$s</string>
    <string name="wifi_connect">连接</string>
    <string name="wifi_forget">忘记</string>
    <string name="wifi_save">保存</string>
    <string name="wifi_cancel">取消</string>
    <string name="wifi_disconnect">断开</string>
    <string name="display_set">分辨率设置</string>
    <string name="display_set_4k_25">4K_25Hz</string>
    <string name="display_set_4k_30">4K_30Hz</string>
    <string name="display_set_1080p_60">1080P_60Hz</string>
    <string name="display_set_1080p_50">1080P_50Hz</string>
    <string name="display_set_1080i_60">1080I_60Hz</string>
    <string name="display_set_1080i_50">1080I_50Hz</string>
    <string name="display_set_720p_60">720P_60Hz</string>
    <string name="display_set_720p_50">720P_50Hz</string>
    <string name="display_set_576p">576P_50Hz</string>
    <string name="display_set_480p">480P_60Hz</string>
    <string name="display_mod_set">Set Mode</string>
    <string name="display_mod_set_pal">PAL</string>
    <string name="display_mod_set_ntsc">NTSC</string>
    <string name="display_position">改变图像位置</string>
    <string name="display_position_left">左</string>
    <string name="display_position_right">右</string>
    <string name="display_position_top">上</string>
    <string name="display_position_bottom">下</string>
    <string name="display_sound">声音设置</string>
    <string name="display_picture">图像设置</string>
    <string name="display_video">视频设置</string>
    <string name="display_pwrsave">节能设置</string>
    <string name="display_video_compare">视频宽高比</string>
    <string name="display_pwr_saving_s">动态节能设置</string>
    <string name="display_video_compare_auto">自动</string>
    <string name="display_video_compare_1">4:3</string>
    <string name="display_video_compare_2">16:9</string>
    <string name="display_video_change">视频宽高比转换方式</string>
    <string name="display_video_change1">拉伸</string>
    <string name="display_video_change2">加黑边</string>
    <string name="set_brightness">亮度</string>
    <string name="set_hue">色度</string>
    <string name="set_contrast">对比度</string>
    <string name="set_saturation">饱和度</string>
    <string name="display_sound_voice">声音设置</string>
    <string name="display_sound_spdif">SPDIF输出</string>
    <string name="display_sound_hdmi">HDMI输出</string>
    <string name="display_sound_hdmi_close">关闭</string>
    <string name="display_sound_hdmi_auto">自动</string>
    <string name="display_sound_hdmi_jiema">解码</string>
    <string name="display_sound_hdmi_touchuan">透传</string>
    <string name="display_confirm_msg">恢复在%1$d 秒.</string>
    <string name="display_confirm_msg1">"你的分辨率已经重新配置这些设置,是否继续？"</string>
    <string name="date_set">日期和时间设置</string>
    <string name="date_auto">自动</string>
    <string name="date_synchronous">同步网络时间</string>
    <string name="date_timezone">选择时区</string>
    <string name="date_time_format">使用24小时格式</string>
    <string name="date_date_format">选择日期格式</string>
    <string name="date_date_format_local">默认(%1$s)</string>
    <string name="date_ntp">NTP 设置</string>
    <string name="date_ntp_set">NTP 服务器地址</string>
    <string name="date_ntp_set_2">备用服务器地址</string>
    <string name="language_set">语言设置</string>
    <string name="language_select">选择语言</string>
    <string name="language_input">输入设置</string>
    <string name="language_input_set">英文键盘</string>
    <string name="language_en">English</string>
    <string name="language_zh">简体中文</string>
    <string name="app_manage">管理应用程序</string>
    <string name="app_download">下载</string>
    <string name="app_down_size">大小:%1$s</string>
    <string name="app_down_info">应用程序已经安装</string>
    <string name="app_run">运行</string>
    <string name="app_run_info">运行应用程序</string>
    <string name="app_all">所有</string>
    <string name="app_all_info">所有应用程序</string>
    <string name="app_storage">存储设备</string>
    <string name="app_storage_info">所有USB磁盘的应用程序</string>
    <string name="app_memory">内存</string>
    <string name="app_mem_total">总空间</string>
    <string name="app_mem_available">可用空间</string>
    <string name="storage">存储空间</string>
    <string name="storage_available">可用空间</string>
    <string name="storage_used">已用容量</string>
    <string name="app_detail_title_info">软件信息</string>
    <string name="app_detail_force">停止</string>
    <string name="app_detail_uninstall">卸载</string>
    <string name="app_detail_info_version">版本 %1$s</string>
    <string name="app_detail_title_storage">存储</string>
    <string name="app_detail_storage_total">总:</string>
    <string name="app_detail_storage_app">应用程序:</string>
    <string name="app_detail_storage_data">数据:</string>
    <string name="app_detail_storage_clear">清除数据</string>
    <string name="app_detail_title_cache">缓存</string>
    <string name="app_detail_cache">缓存:</string>
    <string name="app_detail_cache_clear">清除缓存</string>
    <string name="app_detail_title_launch">启动默认桌面</string>
    <string name="app_detail_launch_no">没有默认设置.</string>
    <string name="app_detail_launch_yes">You have selected to launch this application by default for some actions.</string>
    <string name="app_detail_launch_clear">清除默认</string>
    <string name="app_dialog_clear_data">所有这些应用程序数据将被删除永久。这包括所有的文件、设置、账户、数据库等等.</string>
    <string name="app_dialog_force">如果你强迫停止应用程序,它可能损毁.</string>
    <string name="app_dialog_uninstall">这个应用程序将被卸掉.</string>
    <string name="upgrade">升级设置</string>
    <string name="upgrade_url">服务器地址</string>
    <string name="upgrade_url_backup">备用服务器</string>
    <string name="upgrade_start">启动升级</string>
    <string name="upgrade_stop">停止升级</string>
    <string name="about_device">设备</string>
    <string name="about_device_model">设备型号</string>
    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="sound_config">音响配置</string>
    <string name="network_connections">网络连接</string>
    <string name="internal_storage">内存</string>
    <string name="storage_space">存储空间</string>
    <string name="the_id_of_the_joy_net">欢网账号</string>
    <string name="device_id">设备ID</string>
    <string name="equipment_type">设备类型</string>
    <string name="about_mac">MAC 地址</string>
    <string name="about_wifi_mac">Wlan MAC</string>
    <string name="about_sequence">序列号</string>
    <string name="the_time_of_compile">编译时间</string>
    <string name="password_setup">下次进入设置时启用</string>
    <string name="show_password">显示密码</string>
    <string name="check_password">确认密码</string>
    <string name="ap_set">热点设置</string>
    <string name="ap_start">启用Wifi热点</string>
    <string name="ap_set_detail">设置Wifi热点</string>
    <string name="off">off</string>
	<string name="onehrs">1 hours</string>
    <string name="twohrs">2 hours</string>
    <string name="threehrs">3 hours</string>
    <string name="fourhrs">4 hours</string>
</resources>