<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sw="http://schemas.android.com/apk/res/com.unionman.settings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/trans"
    android:orientation="vertical" >

    <TextView
        style="@style/title"
        android:text="@string/date_set" />

    <com.unionman.settings.custom.CheckRadioButton
        android:id="@id/crb_date_auto"
        style="@style/checkRadioButton_normal"
        android:nextFocusUp="@id/crb_date_auto"
        android:visibility="gone"
        sw:isChecked="true"
        sw:text1="@string/date_auto"
        sw:text2="@string/date_synchronous" />

    <com.unionman.settings.custom.CheckRadioButton
        android:id="@id/crb_date_timezone"
        style="@style/checkRadioButton_normal"
        android:nextFocusUp="@id/crb_date_timezone"
        sw:hasImage="false"
        sw:text1="@string/date_timezone" />

    <include layout="@layout/divider" />

    <com.unionman.settings.custom.CheckRadioButton
        android:id="@id/crb_date_timeformat"
        style="@style/checkRadioButton_normal"
        sw:text1="@string/date_time_format" />

    <include layout="@layout/divider" />

    <com.unionman.settings.custom.CheckRadioButton
        android:id="@id/crb_date_dateformat"
        style="@style/checkRadioButton_normal"
        sw:hasImage="false"
        sw:text1="@string/date_date_format" />

    <TextView
        style="@style/title"
        android:text="@string/date_ntp" />

    <com.unionman.settings.custom.CheckRadioButton
        android:id="@id/crb_date_ntpset"
        style="@style/checkRadioButton_normal"
        android:nextFocusDown="@id/crb_date_ntpset"
        sw:hasImage="false"
        sw:text1="@string/date_ntp_set" />
    <include  layout="@layout/divider" />

</LinearLayout>