<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sw="http://schemas.android.com/apk/res/com.unionman.settings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/trans"
    android:orientation="vertical" >

    <TextView
        style="@style/title"
        android:text="@string/menu_pwdprotected" />

    <com.unionman.settings.custom.CheckRadioButton
        android:id="@+id/crb_wifi_toggle"
        style="@style/checkRadioButton_normal"
        android:nextFocusUp="@+id/crb_wifi_toggle"
        sw:text1="@string/password_setup" />

    <include
        android:id="@+id/line1"
        layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/line2"
        style="@style/input_layout" >

        <TextView
            style="@style/edit_left_lable"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edit_iptv_password"
            style="@style/edit_short_2"
            android:password="true" />

        <CheckBox
            android:id="@+id/checkBox_psd"
            style="@style/MY_CHECHBOX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"/>
<!--       <com.unionman.settings.custom.CheckRadioButton
        android:id="@+id/checkBox_psd"
       android:focusable = "true"
       android:nextFocusLeft = "@id/leftMenu_layout"
       android:layout_width="wrap_content"
       android:layout_height="@dimen/setitem_height"
        text_color1="@drawable/selector_crb_text"
        sw:hasImage="true"
        sw:text1="@string/show_password" /> -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        style="@style/input_layout" >

        <TextView
            style="@style/edit_left_lable"
            android:text="@string/check_password" />

        <EditText
            android:id="@+id/edit_iptv_password2"
            style="@style/edit_short_2"
            android:password="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/line4"
        android:layout_width="481.0dip"
        android:layout_height="100.0dip"
        android:layout_marginLeft="240.0dip" >

        <Button
            android:id="@+id/button1"
            style="@style/button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="30.0dip"
            android:nextFocusDown="@+id/button1"
            android:nextFocusLeft="@+id/leftMenu_layout"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/button2"
            style="@style/button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="30.0dip"
            android:nextFocusDown="@+id/button2"
            android:text="@string/cancel"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>